--- a/package.json
+++ b/package.json
@@ -10,8 +10,28 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-firebase/app": "^15.4.0",
+    "@react-native-firebase/auth": "^15.4.0",
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
+    "@react-navigation/stack": "^6.2.3",
+    "@reduxjs/toolkit": "^1.8.5",
+    "i18next": "^21.9.1",
     "react": "18.1.0",
-    "react-native": "0.70.0"
+    "react-firebaseui": "^6.0.0",
+    "react-i18next": "^11.18.5",
+    "react-native": "0.70.0",
+    "react-native-device-info": "^10.0.2",
+    "react-native-gesture-handler": "^2.6.0",
+    "react-native-haptic-feedback": "^1.14.0",
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-reanimated": "^2.10.0",
+    "react-native-safe-area-context": "^4.3.3",
+    "react-native-screens": "^3.17.0",
+    "react-native-svg": "^13.1.0",
+    "react-redux": "^8.0.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -20,6 +40,7 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.69.6",
+    "@types/react-redux": "^7.1.24",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
