--- a/package.json
+++ b/package.json
@@ -61,6 +61,9 @@
       "jsx",
       "json",
       "node"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?@react-native|react-native|react-navigation|@react-navigation/.*))"
     ]
   }
 }
