--- a/package.json
+++ b/package.json
@@ -23,15 +23,18 @@
     "react-i18next": "^11.18.5",
     "react-native": "0.70.0",
     "react-native-device-info": "^10.0.2",
+    "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^2.6.0",
     "react-native-haptic-feedback": "^1.14.0",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-maps": "^1.3.1",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-svg": "^13.1.0",
     "react-redux": "^8.0.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "throttle-debounce": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
