--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,8 @@ jobs:
       - name: Build Android Release
         run: |
           cd android && ./gradlew assembleRelease
+        env:    
+            API_KEY: ${{ secrets.MAPS_API_KEY }}
       - name: Upload APK
         uses: actions/upload-artifact@v1
         with:
