--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "FIUBER",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -54,14 +54,7 @@
   },
   "jest": {
     "preset": "react-native",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ],
+    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"],
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?@react-native|react-native|react-navigation|@react-navigation/.*))"
     ]
