--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-firebase/app": "^15.4.0",
     "@react-native-firebase/auth": "^15.4.0",
+    "@react-native-firebase/firestore": "^15.6.0",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "@react-navigation/stack": "^6.2.3",
     "@reduxjs/toolkit": "^1.8.5",
     "i18next": "^21.9.1",
+    "loadash": "^1.0.0",
     "react": "18.1.0",
     "react-firebaseui": "^6.0.0",
     "react-i18next": "^11.18.5",
@@ -42,6 +44,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
+    "@types/lodash": "^4.14.186",
     "@types/react-native": "^0.69.6",
     "@types/react-redux": "^7.1.24",
     "@types/react-test-renderer": "^18.0.0",
@@ -57,7 +60,14 @@
   },
   "jest": {
     "preset": "react-native",
-    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ],
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?@react-native|react-native|react-navigation|@react-navigation/.*))"
     ]
