--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -86,6 +86,9 @@ project.ext.react = [
 
 apply from: "../../node_modules/react-native/react.gradle"
 
+
+apply from: project(":react-native-config").projectDir.getPath() + "/dotenv.gradle"
+
 /**
  * Set this to true to create two separate APKs instead of one:
  *   - An APK that only works on ARM devices
@@ -143,8 +146,8 @@ android {
         versionCode 1
         versionName "1.0"
         buildConfigField "boolean", "IS_NEW_ARCHITECTURE_ENABLED", isNewArchitectureEnabled().toString()
-	
-	manifestPlaceholders = [API_KEY: "$System.env.API_KEY"]
+
+	    manifestPlaceholders = [MAPS_API_KEY: "$System.env.MAPS_API_KEY"]
     
         if (isNewArchitectureEnabled()) {
             // We configure the CMake build only if you decide to opt-in for the New Architecture.
