--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-firebaseui": "^6.0.0",
     "react-i18next": "^11.18.5",
     "react-native": "0.70.0",
+    "react-native-config": "^1.4.6",
     "react-native-device-info": "^10.0.2",
     "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^2.6.0",
