--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           cd android && ./gradlew assembleRelease
         env:    
-            API_KEY: ${{ secrets.MAPS_API_KEY }}
+            MAPS_API_KEY: ${{ secrets.MAPS_API_KEY }}
       - name: Upload APK
         uses: actions/upload-artifact@v1
         with:
@@ -37,6 +37,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0 # Required due to the way Git works, without it this action won't be able to find any or the correct tags
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v1.3
+        with:
+          MAPS_API_KEY: ${{ secrets.MAPS_API_KEY }}
       - name: 'Get Previous tag'
         id: previoustag
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
