--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "FIUBER",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -24,12 +24,16 @@
     "react-firebaseui": "^6.0.0",
     "react-i18next": "^11.18.5",
     "react-native": "0.70.0",
+    "react-native-config": "^1.4.6",
     "react-native-device-info": "^10.0.2",
     "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^2.6.0",
+    "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-haptic-feedback": "^1.14.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "^1.3.1",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-permissions": "^3.6.1",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
