--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-community/clipboard": "^1.5.1",
     "@react-native-firebase/app": "^15.4.0",
     "@react-native-firebase/auth": "^15.4.0",
     "@react-native-firebase/firestore": "^15.6.0",
@@ -18,6 +19,7 @@
     "@react-navigation/native-stack": "^6.8.0",
     "@react-navigation/stack": "^6.2.3",
     "@reduxjs/toolkit": "^1.8.5",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
     "i18next": "^21.9.1",
     "loadash": "^1.0.0",
     "react": "18.1.0",
@@ -34,6 +36,7 @@
     "react-native-maps": "^1.3.1",
     "react-native-maps-directions": "^1.9.0",
     "react-native-permissions": "^3.6.1",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
