--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@react-navigation/stack": "^6.2.3",
     "@reduxjs/toolkit": "^1.8.5",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
+    "axios": "^1.1.2",
     "i18next": "^21.9.1",
     "loadash": "^1.0.0",
     "react": "18.1.0",
     "react-firebaseui": "^6.0.0",
     "react-i18next": "^11.18.5",
     "react-native": "0.70.0",
+    "react-native-axios": "^0.17.1",
     "react-native-config": "^1.4.6",
     "react-native-device-info": "^10.0.2",
     "react-native-geocoding": "^0.5.0",
@@ -41,6 +43,7 @@
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-svg": "^13.1.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.2",
     "redux-persist": "^6.0.0",
     "throttle-debounce": "^5.0.0"
