--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^6.8.0",
     "@react-navigation/stack": "^6.2.3",
     "@reduxjs/toolkit": "^1.8.5",
+    "axios": "0.27.2",
     "i18next": "^21.9.1",
     "loadash": "^1.0.0",
     "react": "18.1.0",
@@ -33,11 +34,14 @@
     "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "^1.3.1",
     "react-native-maps-directions": "^1.9.0",
+    "react-native-modalize": "^2.1.1",
     "react-native-permissions": "^3.6.1",
+    "react-native-portalize": "^1.0.7",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-svg": "^13.1.0",
+    "react-native-svg-uri": "^1.2.3",
     "react-redux": "^8.0.2",
     "redux-persist": "^6.0.0",
     "throttle-debounce": "^5.0.0"
