--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-firebase/auth": "^15.4.0",
     "@react-native-firebase/firestore": "^15.6.0",
     "@react-native-google-signin/google-signin": "^8.0.0",
+    "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "@react-navigation/stack": "^6.2.3",
