--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -147,7 +147,7 @@ android {
         versionName "1.0"
         buildConfigField "boolean", "IS_NEW_ARCHITECTURE_ENABLED", isNewArchitectureEnabled().toString()
 
-	    manifestPlaceholders = [MAPS_API_KEY: "$System.env.MAPS_API_KEY"]
+	    manifestPlaceholders = [MAPS_API_KEY: project.env.get('MAPS_API_KEY')]
     
         if (isNewArchitectureEnabled()) {
             // We configure the CMake build only if you decide to opt-in for the New Architecture.
