--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-modalize": "^2.1.1",
     "react-native-permissions": "^3.6.1",
     "react-native-portalize": "^1.0.7",
+    "react-native-progress": "^5.0.0",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
