--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "FIUBER",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -42,6 +42,7 @@
     "react-native-permissions": "^3.6.1",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-portalize": "^1.0.7",
+    "react-native-progress": "^5.0.0",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
