--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/clipboard": "^1.5.1",
-    "@react-native-firebase/app": "^15.4.0",
-    "@react-native-firebase/auth": "^15.4.0",
+    "@react-native-firebase/app": "15.4.0",
+    "@react-native-firebase/auth": "15.4.0",
     "@react-native-firebase/firestore": "^15.6.0",
     "@react-native-google-signin/google-signin": "^8.0.0",
     "@react-navigation/native": "^6.0.12",
