--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "FIUBER",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -12,9 +12,9 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/clipboard": "^1.5.1",
-    "@react-native-firebase/app": "^15.4.0",
-    "@react-native-firebase/auth": "^15.4.0",
-    "@react-native-firebase/firestore": "^15.6.0",
+    "@react-native-firebase/app": "15.7.1",
+    "@react-native-firebase/auth": "15.7.1",
+    "@react-native-firebase/firestore": "^15.7.1",
     "@react-native-google-signin/google-signin": "^8.0.0",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
