--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "FIUBER",
-  "version": "0.1.6",
+  "version": "0.1.8",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -12,8 +12,8 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/clipboard": "^1.5.1",
-    "@react-native-firebase/app": "^15.4.0",
-    "@react-native-firebase/auth": "^15.4.0",
+    "@react-native-firebase/app": "15.4.0",
+    "@react-native-firebase/auth": "15.4.0",
     "@react-native-firebase/firestore": "^15.6.0",
     "@react-native-google-signin/google-signin": "^8.0.0",
     "@react-navigation/native": "^6.0.12",
@@ -42,6 +42,7 @@
     "react-native-permissions": "^3.6.1",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-portalize": "^1.0.7",
+    "react-native-progress": "^5.0.0",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
