--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/app": "15.7.1",
     "@react-native-firebase/auth": "15.7.1",
     "@react-native-firebase/firestore": "^15.7.1",
+    "@react-native-firebase/messaging": "^16.4.6",
     "@react-native-google-signin/google-signin": "^8.0.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.12",
