--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/jest": "^26.0.23",
     "@types/lodash": "^4.14.186",
     "@types/react-native": "^0.69.6",
+    "@types/react-native-vector-icons": "^6.4.12",
     "@types/react-redux": "^7.1.24",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
